<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Truco</string>
    <string name="new_game">Novo Jogo</string>
    <string name="connect_bluetooth">Conectar bluetooth</string>
    <string name="host_bluetooth">Criar bluetooth</string>
    <string name="statistics">Estatísticas</string>
    <string name="options">Opções</string>
    <string name="help">Ajuda</string>
    <string name="exit">Sair</string>
    <string name="card">Carta</string>
    <string name="deck">Baralho</string>
    <string name="turn">Vira</string>
    <string name="player_0">Jogador 1</string>
    <string name="player_1">Jogador 2</string>
    <string name="player_2">Jogador 3</string>
    <string name="player_3">Jogador 4</string>
    <string name="player_virtual">Jogador Virtual</string>
    <string name="team">Time</string>
    <string name="team_0">Time 1</string>
    <string name="team_1">Time 2</string>
    <string name="name">Nome</string>
    <string name="change_name">Troque seu nome</string>
    <string name="table_color">Cor da mesa</string>
    <string name="select_table_color">Selecione a cor da mesa</string>
    
    <string name="truco">Truco</string>
    <string name="six">Seis</string>
    <string name="nine">Nove</string>
    <string name="twelve">Doze</string>
    <string name="open">Aberta</string>
    <string name="closed">Fechada</string>
    
    <string name="played_matches">Partidas Jogadas</string>
    <string name="wins">Vitórias</string>
    <string name="losses">Derrotas</string>
    <string name="you_won">Você venceu!</string>
    <string name="you_lost">Você perdeu!</string>
    
    <string name="select_host">Selecione um dispositivo para se conectar:</string>
    <string name="refresh">Atualizar</string>
    <string name="select_team">Selecione seu Time</string>
    <string name="join">Entrar</string>
    <string name="start">Iniciar</string>
    
    <string name="waiting_players">Esperando jogadores...</string>
    <string name="connecting">Conectando...</string>
    <string name="connected">Conectado!</string>
    <string name="connect_fail">Não foi possível conectar.</string>
    <string name="connection_lost">A conexão foi perdida.</string>

    <string-array name="TableColors">
        <item>Verde</item>
        <item>Vermelho</item>
        <item>Preto</item>
        <item>Caqui</item>
        <item>Pardo</item>
    </string-array>
    <string-array name="TableColorValues">
        <item>#01864d</item>
        <item>#9b3a33</item>
        <item>#231f20</item>
        <item>#ad9476</item>
        <item>#7f6d5f</item>
    </string-array>

</resources>