<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:padding="20dp"
    android:orientation="vertical" >

    <TableRow>
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/played_matches" />
	
	    <TextView
	        android:id="@+id/played_matches"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="end" />
	</TableRow>
	
    <TableRow>
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wins" />
	
	    <TextView
	        android:id="@+id/wins"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="end" />
	</TableRow>
	
    <TableRow>
	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/losses" />

	    <TextView
	        android:id="@+id/losses"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="end" />
	</TableRow>
    

</TableLayout>
